Chat message overflow issue wrapped.

--- a/app/assets/stylesheets/chats.css.scss
+++ b/app/assets/stylesheets/chats.css.scss
@@ -9,7 +9,7 @@
     }
     padding: 10px;
     border: 1px solid #d0dff5;
-    background: #e9f0fa;
+    overflow-wrap: break-word;
   }
   p.bg-color-1 {
     background: #e9f0fa;
